assets/pages/mainpage/style.css
:root {
	--bg: hsl(220, 10%, 8%);
	--bg-2: hsl(220, 10%, 11%);
	--bg-3: hsl(220, 10%, 16%);
	--txt: hsl(220, 30%, 80%);
	--txt-1: hsl(220, 45%, 90%);
	--txt-2: hsl(220, 14%, 55%);
	--txt-3: hsl(220, 11%, 35%);
}

html,
body {
	height: 100%;
	margin: 0;
	overflow: hidden;
}

body {
	background-color: var(--bg);
	color: var(--txt);
	font-family: 'Space Mono', monospace;
	display: flex;
	justify-content: center;
	align-items: center;
}

h1, h2, h3, h4 {
    color: var(--txt-1);
    line-height: 1.3;
    font-family: Space Mono, monospace;
    font-variant-ligatures: no-common-ligatures;
    font-weight: 400;
    margin-block-start: 5.1px;
    margin-block-end: 5.1px;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}

main {
	width: 100%;
	max-width: 800px;
	padding: 1rem;
}

.console {
	padding: 1rem;
	border-radius: 8px;
	max-height: 80vh;
	overflow: hidden;
	display: flex;
	flex-direction: column;
}

.flex-container {
    display: flex;
    gap: 10px;
}

.output {
    margin-top: 10px;
}

.scroll-container {
	overflow-y: auto;
	scrollbar-width: none;
	-ms-overflow-style: none;
	}

	.scroll-container::-webkit-scrollbar {
		display: none;
}

.input-line {
	background-color: var(--bg);
	display: flex;
	align-items: center;
	gap: 0rem;
	padding: 1.5rem 0rem;
	position: sticky;
	bottom: 0;
}

#commandInput {
    background: transparent;
    border: 1px solid transparent;
    border-radius: 4px;
    box-shadow: none;
    color: var(--txt-1);
    flex: 1;
    font-size: 16px;
    height: 100%;
    padding: 0px 5px;
    transition: color .2s;
}

#commandInput:focus {
    outline: none;
}

input#commandInput.valid {
	color: limegreen;
}

input#commandInput.invalid {
	color: crimson;
}

#mobileInput {
    display: none;
}

.logo {
	background-image: url('/assets/logos/favicon.png');
	background-size: cover;
	background-position: center;
	background-repeat: no-repeat;
	border-radius: 50%;
	width: 70px;
	height: 70px;
}

@media (max-width: 600px) {
	.console {
		max-width: 600px;
		padding: 40px 5px;
		text-align: left;
		width: 100%;
	}

	#mobileInput {
		display: block;
	}

	#desktopInput {
		display: none;
	}
}

